# TGTradeX

./: .gitignore  README.md  adjust_positions.py  analyze_funding_klines.py  bn.sh  bn_start.sh  bn_stop.sh  bn_view_log.sh  bnm.sh  bu.sh  bum.sh  context.md  main.py  main_funcing_watch.py  print_order_book.py  pyproject.toml  requirements.txt  run_auto.py  run_mix_strategies.py  run_oi_long.py  run_oi_momentum.py  run_service.py  setup.sh  start.sh  stop.sh  test_sl_tp.py  test_ws_order_flow.py  view_log.sh  交易策略.md  資金費率空單策略.md
bot/: listener.py  parser.py
config/: settings.py
examples/: basic_usage.py
exchanges/: __init__.py  base.py
exchanges/binance/: adapter.py
exchanges/bitunix/: __init__.py  adapter.py  client.py  error_codes.py  errors.py  futures_private_http.py  futures_public_http.py  http.py  signer.py  trading_flow.py  ws.py
services/: indicators.py  log_handler.py  market_state.py  notifier.py  oi_divergence.py  oi_momentum.py  position_sizer.py  position_store.py  risk_guard.py  runner.py  runner_manager.py  symbol_scanner.py  trade_journal.py
services/external_data/: base.py  binance_futures.py  coinglass.py  market_bias.py
services/strategies/: base.py  conservative.py  dip_volume.py  ensemble.py  fibonacci.py  long_oi_momentum.py  long_only_oi.py  oi_ls_ratio.py  trend_following.py  volume_profile.py  vwap_poc.py
tests/: test_signer.py
trader/: dispatcher.py  models.py
